# rest-generator

./: .env  .gitignore  MANIFEST.in  README.MD  README.md  api_client.py  data_generator_pydantic.py  generate_clients.py  main.py  model_generator.py  models.py  pyproject.toml  requirements.txt  setup.py  swagger.json
codegen/: client_generator.py  data_models.py  facade_generator.py  generate_app_facade.py  model_generator.py
generated_clients/: accesssetting_client.py  approvalprocesses_client.py  approvalprocesstemplates_client.py  entities_client.py  folders_client.py  issues_client.py  permissions_client.py  rolegroups_client.py  users_client.py
http_clients/: api_client.py
pydantic_utils/: data_generator_pydantic.py  pydantic_config.py
rest_clients/: api_facade.py
rest_clients/checkpoints/: __init__.py  facade.py
rest_clients/checkpoints/access_passes/: __init__.py  client.py
rest_clients/checkpoints/access_passes/models/: __init__.py  access_pass_create.py  access_pass_pdf_data.py  access_pass_pdf_response.py  access_pass_read.py  access_pass_search.py  (+13 more)
rest_clients/checkpoints/checkpoints/: __init__.py  client.py
rest_clients/checkpoints/files/: __init__.py  client.py
rest_clients/checkpoints/pass_status/: __init__.py  client.py
rest_clients/checkpoints/probe/: __init__.py  client.py
rest_clients/checkpoints/project/: __init__.py  client.py
rest_clients/checkpoints/report/: __init__.py  client.py
rest_clients/checkpoints/visit_sessions/: __init__.py  client.py
src/: __init__.py  constants.py  exceptions.py  main.py
src/codegen/: asserts_generator.py  client_generator.py  data_models.py  endpoint_metadata.py  enhanced_client_generator.py  facade_generator.py  generate_app_facade.py  model_generator.py  tests_generator.py
src/codegen/templates/: app_facade.j2  client_template.j2  facade_template.j2
src/dto_parser/: __init__.py  model_generator.py  schema_parser.py  type_resolver.py
src/my_codegen/: __init__.py  constants.py  main.py
src/my_codegen/codegen/: client_generator.py  data_models.py  django_generator.py  enhanced_client_generator.py  facade_generator.py  generate_app_facade.py  model_generator.py
src/my_codegen/dto_parser/: __init__.py  model_generator.py  schema_parser.py  type_resolver.py
src/my_codegen/http_clients/: api_client.py  api_client_2.py  api_facade.py
src/my_codegen/pydantic_utils/: data_generator_pydantic.py  pydantic_config.py
src/my_codegen/rest_client/: __init__.py  api_client.py  base_url.py  client.py  logging_client.py
src/my_codegen/swagger/: loader.py  processor.py  swagger_models.py
src/my_codegen/templates/: app_facade.j2  client_template.j2  django_template.j2  facade_template.j2
src/my_codegen/utils/: assertions.py  base_url.py  logger.py  naming.py  report_utils.py  validators.py
src/pydantic_utils/: data_generator_pydantic.py  pydantic_config.py
src/pydantic_utils/generators/: base_generator.py  generators.py  smart_field_config.py  type_utils.py  value_generator.py
src/rest_client/: __init__.py  client.py  processor.py
src/rest_clients/: api_facade.py
src/rest_clients/cde/: __init__.py  facade.py
src/swagger/: loader.py  processor.py  swagger_models.py
src/utils/: assertions.py  logger.py  naming.py  report_utils.py  validators.py
swagger/: loader.py  processor.py
templates/: app_facade.j2  client_template.j2  facade_template.j2
utils/: common.py  logger.py  shell.py
(+224 files in other folders)
